car's api fetched all records
